update the colors and hero section

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,13 +7,15 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-white: white;
+  --ifm-color-black: black;
+  --ifm-color-primary: #09d3ac;
+  --ifm-color-primary-dark: #08be9b;
+  --ifm-color-primary-darker: #08b392;
+  --ifm-color-primary-darkest: #069478;
+  --ifm-color-primary-light: #2edab8;
+  --ifm-color-primary-lighter: #53e0c5;
+  --ifm-color-primary-lightest: #84e9d6;
   --ifm-code-font-size: 95%;
 }
 
@@ -22,4 +24,19 @@
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
+}
+
+#hero__button {
+  color: var(--ifm-color-white);
+}
+
+.hero__title-text {
+  font-size: 4rem;
+  color: var(--ifm-color-white);
+}
+
+.hero__subtitle-text {
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: var(--ifm-color-white);
 }
